# log4TC

./: .gitignore  .gitignore-rust  ARCHITECTURE.md  ARCHITECT_SESSION_FINAL_REPORT.md  Cargo.toml  DOCUMENTATION_COMPLETION_SUMMARY.md  Dockerfile  Dockerfile.arm64  EXPLORATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  PERFORMANCE.md  PERFORMANCE_ANALYSIS.md  PROJECT_ANALYSIS.md  README_EXPLORATION.md  RUST_IMPLEMENTATION_COMPLETE.md  RUST_MIGRATION_GUIDE.md  RUST_WORKSPACE.md  SECURITY_EXPERT_FINAL_REPORT.md  SECURITY_README.md  SECURITY_REVIEW_IMPLEMENTER.md  SECURITY_REVIEW_INDEX.md  TASK_COMPLETION_REPORT.md  TECHNICAL_SPECIFICATIONS.md  TESTING_GUIDE.md  TEST_SUMMARY.md  WORKSPACE_SETUP_SUMMARY.md  config.docker.json  config.example.json  docker-compose.yml  otel-collector-config.yml
.github/workflows/: release.yml
crates/log4tc-ads/: Cargo.toml
crates/log4tc-ads/src/: ams.rs  ams_server.rs  lib.rs  listener.rs  parser.rs  protocol.rs
crates/log4tc-benches/: Cargo.toml  README.md
crates/log4tc-benches/benches/: ads_parser.rs  end_to_end.rs  log_entry_creation.rs  otel_conversion.rs
crates/log4tc-benches/src/: lib.rs
crates/log4tc-core/: Cargo.toml
crates/log4tc-core/src/: config.rs  formatter.rs  lib.rs  models.rs
crates/log4tc-integration-tests/: Cargo.toml
crates/log4tc-integration-tests/tests/: e2e_flow.rs  error_handling.rs  module_integration.rs
crates/log4tc-otel/: Cargo.toml
crates/log4tc-otel/src/: exporter.rs  lib.rs  mapping.rs  receiver.rs
crates/log4tc-service/: Cargo.toml
crates/log4tc-service/src/: dispatcher.rs  main.rs  service.rs  windows_service.rs
docs/: SECURITY_ANALYSIS.md  SECURITY_FINDINGS_SUMMARY.md  SECURITY_REVIEW_TASK10.md  SECURITY_REVIEW_TASK4.md  SECURITY_REVIEW_TASK8.md  TASK11_SECURITY_REVIEW_CHECKLIST.md  ads-protocol-spec.md  ams-tcp-implementation-plan.md  architecture.md  configuration-deployment.md  docfx.csproj  docker-quickstart.md  migration-plan.md  otel-mapping.md  rust-service-design.md  testing-strategy.md  twincat-optimization-plan.md  twincat-performance-review.md
source/Log4Tc/: .editorconfig  Directory.Build.props  Log4Tc.sln  build.cake
source/Log4Tc/Log4Tc.Dispatcher/: AssemblyProperties.cs  Log4Tc.Dispatcher.csproj  LogDispatcherExtensions.cs  LogDispatcherService.cs  OutputDispatch.cs
source/Log4Tc/Log4Tc.Dispatcher.Test/: Log4Tc.Dispatcher.Test.csproj
source/Log4Tc/Log4Tc.Model/: AssemblyProperties.cs  LogEntry.cs  LogLevel.cs
source/Log4Tc/Log4Tc.Model.Test/: Log4Tc.Model.Test.csproj  LogEntryTest.cs
source/Log4Tc/Log4Tc.Output/: IOutputFactory.cs  Log4Tc.Output.csproj  OutputExtensions.cs  OutputHandlerBase.cs
source/Log4Tc/Log4Tc.Output.Graylog/: AssemblyProperties.cs  GelfData.cs  GraylogLog4TcOutputFactory.cs  GraylogLog4TcOutputPlugin.cs  GraylogOutput.cs  GraylogOutputSettings.cs  Log4Tc.Output.Graylog.csproj
source/Log4Tc/Log4Tc.Output.Graylog.Test/: GelfDataTest.cs  Log4Tc.Output.Graylog.Test.csproj
source/Log4Tc/Log4Tc.Output.InfluxDb/: ArgumentPointFactory.cs  AssemblyProperties.cs  BasePointFactory.cs  IInfluxPointFactory.cs  InfluxDbLog4TcOutputFactory.cs  InfluxDbLog4TcOutputPlugin.cs  InfluxDbOutput.cs  InfluxDbOutputSettings.cs  Log4Tc.Output.InfluxDb.csproj  SyslogPointFactory.cs
source/Log4Tc/Log4Tc.Output.InfluxDb.Test/: Log4Tc.Output.InfluxDb.Test.csproj  SysLogPointFactoryTest.cs
source/Log4Tc/Log4Tc.Output.NLog/: Log4Tc.Output.NLog.csproj  NLog.config  NLog.config.log4view  NLog.config.textlogging  NLogLog4TcOutput.cs  NLogLog4TcOutputConfiguration.cs  NLogLog4TcOutputFactory.cs  NLogLog4TcOutputInitializer.cs  NLogLog4TcOutputPlugin.cs
source/Log4Tc/Log4Tc.Output.NLog.Test/: CommonNLogTests.cs  Log4Tc.Output.NLog.Test.csproj  NLogLog4TcOutputTest.cs
source/Log4Tc/Log4Tc.Output.Sql/: BaseSqlWriter.cs  DbValueType.cs  FullFlatSqlWriter.cs  Log4Tc.Output.Sql.csproj  README.md  SimpleFlatSqlWriter.cs  SqlLog4TcOutputFactory.cs  SqlLog4TcOutputPlugin.cs  SqlOutput.cs  SqlOutputSettings.cs
source/Log4Tc/Log4Tc.Plugin/: IPlugin.cs  Log4TcPluginAttribute.cs  PluginBuilder.cs  PluginExtensions.cs  PluginLoader.cs
source/Log4Tc/Log4Tc.Receiver/: AdsHostnameService.cs  AdsLogReceiver.cs  AdsLogReceiverExtensions.cs  AdsLogReceiverService.cs  Log4Tc.Receiver.csproj
source/Log4Tc/Log4Tc.Service/: InstallService.ps1  Log4Tc.Service.csproj  Program.cs  UninstallService.ps1  appsettingsSql.json
source/Log4Tc/Log4Tc.Setup/: Mbc.Log4Tc.Setup.wixproj  Product.wxs
source/Log4Tc/Log4Tc.SmokeTest/: Log4Tc.SmokeTest.csproj  Log4TcService.cs  PlcControl.cs  SmokeTest.cs  TestRecordingOutput.cs
source/Log4Tc/Log4TcPrototype/: Log4TcPrototype.csproj  Program.cs
source/Log4Tc/Mbc.Log4Tc.Dispatcher/: Mbc.Log4Tc.Dispatcher.csproj
source/Log4Tc/Mbc.Log4Tc.Model.Test/: Mbc.Log4Tc.Model.Test.csproj
source/Log4Tc/Mbc.Log4Tc.Output.Graylog.Test/: Mbc.Log4Tc.Output.Graylog.Test.csproj
source/Log4Tc/Mbc.Log4Tc.Output.InfluxDb/: InfluxDbOutput.cs  Mbc.Log4Tc.Output.InfluxDb.csproj
source/Log4Tc/Mbc.Log4Tc.Output.InfluxDb.Test/: Mbc.Log4Tc.Output.InfluxDb.Test.csproj
source/Log4Tc/Mbc.Log4Tc.Output.NLog.Test/: Mbc.Log4Tc.Output.NLog.Test.csproj
source/Log4Tc/Mbc.Log4Tc.Receiver/: AdsHostnameService.cs  AdsLogReceiver.cs  AdsLogReceiverService.cs  Mbc.Log4Tc.Receiver.csproj
source/Log4Tc/Mbc.Log4Tc.Service/: Mbc.Log4Tc.Service.csproj
source/Log4Tc/Mbc.Log4Tc.Setup/: Mbc.Log4Tc.Setup.wixproj  Product.wxs
source/Log4Tc/Mbc.Log4Tc.SmokeTest/: Mbc.Log4Tc.SmokeTest.csproj
source/Log4Tc/Mbc.Log4TcDispatcher.Test/: Mbc.Log4TcDispatcher.Test.csproj
source/TwinCat_Lib/log4tc/: log4tc.sln  log4tc.~u
tests/: integration_config.rs  integration_formatter.rs  integration_mapping.rs  integration_parser.rs  security_receiver_tls.rs
(+54 files in other folders)
