[package]
name = "log4tc-benches"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Performance benchmarks for Log4TC logging bridge"
publish = false

[dependencies]
log4tc-core.workspace = true
log4tc-ads.workspace = true
log4tc-otel.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ads_parser"
harness = false

[[bench]]
name = "log_entry_creation"
harness = false

[[bench]]
name = "otel_conversion"
harness = false

[[bench]]
name = "end_to_end"
harness = false
