[package]
name = "log4tc-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Log4TC main service - logging bridge for Beckhoff TwinCAT and OpenTelemetry"

[dependencies]
log4tc-core = { path = "../log4tc-core" }
log4tc-ads = { path = "../log4tc-ads" }
log4tc-otel = { path = "../log4tc-otel" }
tokio.workspace = true
async-trait.workspace = true
tokio-util.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
axum.workspace = true
hyper.workspace = true
hyper-util.workspace = true
bytes.workspace = true
chrono.workspace = true
uuid.workspace = true
clap = { version = "4.4", features = ["derive"] }
reqwest.workspace = true

[dev-dependencies]
mockall.workspace = true
